# stm32_naked

./: .gitignore  CMakeLists.txt  arm-gcc-toolchain.cmake  build.sh  build_newlib.sh  flash.jlink  makefile
app/: CMakeLists.txt  link_script.ld  main.c  startup.s
app/inc/: isr_handler.h  systemcall.h
app/libc/stdio/: puts.c
app/src/: isr_handler.c  systemcall.c
bootloader/: CMakeLists.txt  bl_link_script.ld  bl_main.c  bl_startup.s
